@@ -1,5 +1,6 @@
 CHANGES IN VERSION 0.99.26
 ------------------------
+ o update geom_tiplab <2015-03-31, Tue>
  o update plot method of beast <2015-03-17, Tue>
  
 CHANGES IN VERSION 0.99.25
